# terminal-bench-env

./: README.md
environments_harbor/aclocal_macro_not_found_hard/environment/legacy-app/: Makefile.am  configure.ac  dbops.c  dbops.h  main.c  mathops.c  mathops.h
environments_harbor/benchmark_google_benchmark_hard/environment/mathlib/: CMakeLists.txt
environments_harbor/benchmark_google_benchmark_hard/environment/mathlib/bench/: CMakeLists.txt  math_bench.cpp
environments_harbor/benchmark_google_benchmark_hard/environment/mathlib/src/: math_utils.cpp  math_utils.h
environments_harbor/clang_sanitizer_address_enabled_hard/environment/calculator/: CMakeLists.txt  main.cpp  test.cpp
environments_harbor/cmake_cpack_installer_generation_hard/environment/loglib/: CMakeLists.txt  README.md
environments_harbor/cmake_cpack_installer_generation_hard/environment/loglib/include/: logger.h
environments_harbor/cmake_cpack_installer_generation_hard/environment/loglib/src/: logger.cpp  main.cpp
environments_harbor/cmake_cpack_installer_generation_medium/environment/mathlib/: CMakeLists.txt  README.md  mathlib.h  test_mathlib.cpp
environments_harbor/cmake_ctest_testing_framework_hard/environment/: CMakeLists.txt  Dockerfile
environments_harbor/cmake_ctest_testing_framework_hard/environment/tests/: test_basic.py
environments_harbor/cmake_ctest_testing_framework_medium/environment/: CMakeLists.txt  Dockerfile  math_functions.cpp  math_functions.h  test_add.cpp  test_edge_cases.cpp  test_multiply.cpp
environments_harbor/cmake_cuda_separable_compilation_medium/environment/build_project/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  utils.cpp  utils.h
environments_harbor/cmake_cuda_toolkit_not_found_hard/environment/: CMakeLists.txt  Dockerfile
environments_harbor/cmake_cuda_toolkit_not_found_hard/environment/cuda/: CMakeLists.txt
environments_harbor/cmake_cuda_toolkit_not_found_hard/environment/lib/: CMakeLists.txt
environments_harbor/cmake_cuda_toolkit_not_found_hard/environment/src/: CMakeLists.txt
environments_harbor/cmake_cuda_toolkit_not_found_hard/environment/tests/: test_outputs.py
environments_harbor/cmake_cuda_toolkit_not_found_hard/tests/: CMakeLists.txt
environments_harbor/cmake_cuda_toolkit_not_found_medium/environment/ml-project/: CMakeLists.txt  kernel.cu  main.cpp  neural_net.h
environments_harbor/cmake_export_compile_commands_medium/environment/cpp_project/: CMakeLists.txt  main.cpp
environments_harbor/cmake_export_compile_commands_medium/environment/cpp_project/tests/: test_math.cpp
environments_harbor/cmake_external_project_add_hard/environment/myapp/: CMakeLists.txt  main.cpp
environments_harbor/cmake_external_project_add_medium/environment/: CMakeLists.txt  Dockerfile
environments_harbor/cmake_external_project_add_medium/environment/src/: main.cpp
environments_harbor/cmake_fetch_content_git_clone_hard/environment/weather_app/: CMakeLists.txt
environments_harbor/cmake_fetch_content_git_clone_hard/environment/weather_app/data/: weather.json
environments_harbor/cmake_fetch_content_git_clone_hard/environment/weather_app/src/: main.cpp
environments_harbor/cmake_generator_expression_error_medium/environment/signal_processor/: CMakeLists.txt
environments_harbor/cmake_generator_expression_error_medium/environment/signal_processor/src/: CMakeLists.txt  main.cpp  signal_lib.cpp  signal_lib.h
environments_harbor/cmake_generator_expression_usage_medium/environment/: CMakeLists.txt  Dockerfile
environments_harbor/cmake_generator_expression_usage_medium/environment/src/: main.cpp  mathlib.cpp
environments_harbor/cmake_generator_ninja_switch_hard/environment/: CMakeLists.txt  Dockerfile
environments_harbor/cmake_generator_ninja_switch_hard/environment/app/: CMakeLists.txt  main.cpp
environments_harbor/cmake_generator_ninja_switch_hard/environment/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
environments_harbor/cmake_generator_ninja_switch_hard/environment/lib2/: CMakeLists.txt  lib2.cpp  lib2.h
environments_harbor/cmake_library_not_found_hints_medium/environment/matrix_calc/: CMakeLists.txt  main.cpp
environments_harbor/cmake_mpi_compiler_wrapper_hard/environment/physics_project/: CMakeLists.txt  test_build.c
environments_harbor/cmake_mpi_compiler_wrapper_hard/environment/physics_project/mpi_sim/: CMakeLists.txt  mpi_sim.cpp
environments_harbor/cmake_mpi_compiler_wrapper_hard/environment/physics_project/utils/: CMakeLists.txt  utils.c  utils.h
environments_harbor/cmake_mpi_compiler_wrapper_hard/environment/physics_project/viz_tool/: CMakeLists.txt  viz_tool.c
environments_harbor/cmake_target_link_libraries_order_medium/environment/: CMakeLists.txt  Dockerfile  algebra.cpp  algebra.h  geometry.cpp  geometry.h  main.cpp
environments_harbor/cmake_toolchain_file_cross_medium/environment/project/: CMakeLists.txt  dataproc.cpp
environments_harbor/concepts_cpp20_constraints_hard/environment/mathlib/: CMakeLists.txt
environments_harbor/concepts_cpp20_constraints_hard/environment/mathlib/include/: concepts.hpp  operations.hpp
environments_harbor/concepts_cpp20_constraints_hard/environment/mathlib/test/: test_main.cpp
environments_harbor/config_guess_update_needed_medium/environment/legacy-app/: Makefile.in  configure  configure.ac  main.c
environments_harbor/config_guess_update_needed_medium/environment/legacy-app/build-aux/: config.guess  config.sub
environments_harbor/configure_cache_stale_values_medium/environment/: Dockerfile  Makefile.in  config.cache  configure  configure.ac  main.c
environments_harbor/m4_macro_expansion_error_hard/environment/: Dockerfile  configure.ac
environments_harbor/m4_macro_expansion_error_hard/environment/m4/: custom_check.m4
environments_harbor/m4_macro_expansion_error_hard/environment/src/: Makefile.am  main.c
environments_harbor/out_of_tree_build_cmake_medium/environment/: CMakeLists.txt  Dockerfile
environments_harbor/out_of_tree_build_cmake_medium/environment/src/: main.cpp
environments_harbor/out_of_tree_build_cmake_medium/environment/src/lib1/: CMakeLists.txt  (+2 more)
(+21289 files in other folders)
