# CUDA Application CMakeLists.txt
cmake_minimum_required(VERSION 3.18)

project(CUDAApplication LANGUAGES CXX CUDA)

# Add executable with CUDA sources
add_executable(cuda_app
    main.cpp
    kernel.cu device_utils.cu
    helper_functions.cpp
)

# Include CUDA directories (typo in variable name)
target_include_directories(cuda_app PRIVATE
    ${CUDA_INLCUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# Set CUDA properties with wrong syntax
set_target_properties(cuda_app PROPERTIES
    CUDA_SEPARABLE_COMPILATION=ON
    CUDA_RESOLVE_DEVICE_SYMBOLS ON
)

# Link CUDA libraries with typo
target_link_libraries(cuda_app
    PRIVATE
    ${CUDA_LIBRRIES}
    ${CMAKE_CUDA_RUNTIME_LIBRARY}
)

# Set CUDA compiler flags with missing closing quote
set(CUDA_NVCC_FLAGS
    "${CUDA_NVCC_FLAGS}"
    "--gpu-architecture=sm_75
    "--use_fast_math"
    "--relocatable-device-code=true"
)

# Configure compile options missing access specifier
target_compile_options(cuda_app
    $<$<COMPILE_LANGUAGE:CUDA>:--extended-lambda>
    $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>
)

# Link to wrong target name
target_link_libraries(cuda_application
    PRIVATE
    cublas
    cufft
)